# subdeploy

./: AGENTS.md  Cargo.toml  README.md
apps/subdeploy/: Cargo.toml
apps/subdeploy/src/: main.rs
crates/subdeploy-core/: Cargo.toml
crates/subdeploy-core/src/: deploy.rs  health.rs  lib.rs
crates/subdeploy-packager/: Cargo.toml
crates/subdeploy-packager/src/: lib.rs
crates/subdeploy-remote/: Cargo.toml
crates/subdeploy-remote/src/: lib.rs
