[workspace]
resolver = "2"
members = [
    "apps/subdeploy",
    "crates/subdeploy-core",
    "crates/subdeploy-packager",
    "crates/subdeploy-remote",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Codex"]
description = "A reusable Docker project deployment CLI over SSH"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5.60", features = ["derive", "env"] }
flate2 = "1.1"
ignore = "0.4.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde_yaml = "0.9"
ssh2 = "0.9.5"
tar = "0.4"
tempfile = "3.15"
thiserror = "2.0"
