[package]
name = "subdeploy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
reqwest.workspace = true
tempfile.workspace = true
thiserror.workspace = true
subdeploy-packager = { path = "../subdeploy-packager" }
subdeploy-remote = { path = "../subdeploy-remote" }

[dev-dependencies]
tempfile.workspace = true
