[package]
name = "subdeploy-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true

[target.'cfg(windows)'.dependencies]
# Windows 上避免强制走 OpenSSL 源码编译，直接使用 libssh2 的原生后端。
ssh2.workspace = true

[target.'cfg(not(windows))'.dependencies]
# 非 Windows 继续保留 vendored OpenSSL，减少系统库前置要求。
ssh2 = { workspace = true, features = ["vendored-openssl"] }

[dependencies]
thiserror.workspace = true
